# neuromorphic-engineering-one

./: .gitignore  2021_Lab01_GroupNumber_FirstName_LastName.ipynb  export_to_pdf.sh  license.txt  pyproject.toml  readme.md  run.sh
config/: default
neuromorphic_engineering_one/: 2021_Lab01_4.5_Jan_Hohenheim.ipynb  2021_Lab01_GroupNumber_FirstName_LastName.ipynb  data.csv
neuromorphic_engineering_one/session10_Photoreceptor/: 2021_Photo_4.5_Jan_Hohenheim.ipynb  2021_Photo_GroupNumber_Maxim_Gaertner.ipynb
neuromorphic_engineering_one/session1_automated_data_acquisition_and_analysis/: 2021_Lab01_4.5_Jan_Hohenheim.ipynb
neuromorphic_engineering_one/session2_trainsistor_superthreshold_saturation_current_and_drain_characteristics/: 2021_Lab2_AboveThr_4.5_Jan_Hohenheim.ipynb  2021_Lab2_AboveThr_4.5_Maxim_Gaertner.ipynb
neuromorphic_engineering_one/session2_transistor_superthreshold_saturation_current_and_drain_characteristics/: 2021_Lab2_AboveThr_4.5_Jan_Hohenheim.ipynb
neuromorphic_engineering_one/session3_subthreshold_behavior_of_transistors/: 2021_Lab04_GroupNumber_FirstName_LastName.ipynb  2021_Lab3_SubThr_4.5_Jan_Hohenheim.ipynb  2021_Lab3_SubThr_4.5_Maxim_Gaertner.ipynb  2021_Lab3_SubThr_4.5_Maxim_Gaertner_working_copy2-Copy1.ipynb  2021_Lab3_SubThr_4.5_Maxim_Gaertner_working_copy2.ipynb  3_1.csv  3_2.csv  4_1.csv  4_2.csv
neuromorphic_engineering_one/session4_static_circuits/: 2021_Lab04_Static_Circuits_4.5_Jan_Hohenheim.ipynb  2021_Lab04_Static_Circuits_4.5_Maxim.Gaertner.ipynb
neuromorphic_engineering_one/session9_neurons/: Lab9_name.ipynb  (+1 more)
(+92 files in other folders)
